logs/Slang/chapter-8/8.20--virtual_method.sv.log
name: virtual_method
description: class with virtual methods
should_fail: 0
tags: 8.20
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv:8:2: error: language feature not yet supported
	class super_cls;
	^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv:15:2: error: language feature not yet supported
	class test_cls extends super_cls;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv:22:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv:23:2: error: use of undeclared identifier 'super_cls'
	super_cls super_obj;
	^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv:26:14: error: language feature not yet supported
		test_obj = new;
		           ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.20--virtual_method.sv:27:15: error: language feature not yet supported
		super_obj = new;
		            ^~~
